# ie0417-dev-b53993

./: CMakeLists.txt  README.md
docs/source/labs/: labs.rst
docs/source/labs/lab1/: lab1.rst
docs/source/projects/final/: final.rst
include/eie_device/: command.h  command_manager.h  transport_server.h
src/: CMakeLists.txt  command.c  command_manager.c  transport_server.c
src/APIServer/: APIServer.py  main.py
src/TransportServer/: CMakeLists.txt
src/TransportServer/include/: transport_server.h
src/TransportServer/src/: CMakeLists.txt  main.c  transport_server.c  zmq_server_rep_pthread.c
src/eieManager/: setup.py
src/eieManager/lib/eieManager/: __init__.py  args.py  main.py
src/eieManager/lib/eieManager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/eieManager/lib/eieManager/DeviceManager/: __init__.py  manager.py  sensor.py
src/eieManager/lib/eieManager/DeviceManager/sensors/: level.py  temp.py
src/lab2/src/eieManager/: requirements.txt
src/lab2/src/eieManager/lib/eieManager/: __init__.py  args.py
src/lab2/src/eieManager/lib/eieManager/DeviceManager/: manager.py  sensor.py
src/lab2/src/eieManager/lib/eieManager/config/: initConfig.json
src/lab3/: CMakeLists.txt  eie_device.pc.in
src/lab3/docs/source/labs/lab1/: lab1.rst
src/lab3/docs/source/labs/lab2/: lab2.rst
src/lab3/include/eie_device/: version.h
src/lab3/src/: command.c  version.c.in
src/lab3/src/config/: device_cfg.json
src/lab3/tools/: CMakeLists.txt
src/lab3/tools/eie_device_server/: main.c
src/lab4/c/sensor_commands/: CMakeLists.txt
src/lab4/c/sensor_commands/include/sensor_commands/: command.h  command_runner.h
src/lab4/c/sensor_commands/test/tests/: command_runner.cpp
src/lab4/python/testing_python/: setup.py
src/lab4/python/testing_python/lib/sensor_commands.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/lab4/python/testing_python/test/: test_sensor_manager.py
src/proyecto/eie_device/: CMakeLists.txt  eie_device.pc.in
src/proyecto/eie_device/include/eie_device/: eie_device.h
src/proyecto/eie_device/src/: CMakeLists.txt  eie_device.c
src/proyecto/eie_device/test/tests/: eie_device.cpp
src/proyecto/eie_device/tools/: CMakeLists.txt
src/proyecto/eie_device/tools/eie_device/: CMakeLists.txt  main.c
src/proyecto/eie_manager_2/: docker-compose.yml
src/proyecto/eie_manager_2/eie_config/: DevOps.json  Dockerfile  eie-manager-config.py  payload.json  thing.json
src/proyecto/eie_manager_2/eie_config/templates/: index.html
src/python/: zmq_client_req.py
testing_python/lib/sensor_commands/sensor/analyzers/: avg_thresh_analyzer.py
testing_python/test/: test_sensor_manager.py
tools/eie_device_server/: CMakeLists.txt  main.c
